# cleanshot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  cleanshot.py  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.sh  fusion_example.sh  hardcore_usage.sh  interactive_usage.sh  ml_beast.sh
samples/: dirty.csv  example_small.csv
tests/: test_ml_features.py
