[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanshot"
version = "0.1.0"
description = "Dataset cleaning CLI powered by DuckDB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aanu Oshakuade" }]
dependencies = ["duckdb>=0.9"]

[project.scripts]
cleanshot = "cleanshot:main"

[tool.setuptools]
py-modules = ["cleanshot"]
